Set up workshop for biodesign

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 ---
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS.
-venue: "FIXME"        # brief name of host site without address (e.g., "Euphoric State University")
-address: "FIXME"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
-country: "FIXME"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
-language: "FIXME"     # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: "FIXME"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
-humandate: "FIXME"    # human-readable date (e.g., "Feb 17-18, 2020")
-humantime: "FIXME"    # human-readable time (e.g., "9:00 am - 4:30 pm")
-startdate: FIXME      # use YYYY-MM-DD format like 2015-01-01
-enddate: FIXME        # use YYYY-MM-DD format like 2015-01-02
-instructor: ["FIXME"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["FIXME"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: "FIXME"      # contact email address for workshop organizer, such as "grace@hopper.org"
+venue: "Arizona State University"        # brief name of host site without address (e.g., "Euphoric State University")
+address: "1001 S McAllister Ave, Tempe, AZ 85281"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
+country: "us"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
+language: "en"     # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
+latlng: "33.419370,-111.928388"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
+humandate: "Feb 18-19"    # human-readable date (e.g., "Feb 17-18, 2020")
+humantime: "9:00am - 4:40pm"    # human-readable time (e.g., "9:00 am - 4:30 pm")
+startdate: 2016-02-18      # use YYYY-MM-DD format like 2015-01-01
+enddate: 2016-02-19        # use YYYY-MM-DD format like 2015-01-02
+instructor: ["Avishek Kumar", "Mahdi Sadjadi"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+helper: ["Maryln Wescoff", "Fran Bilas", "Ruth Lichterman"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+contact: "avishek.kumar@asu.edu"      # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad:         # optional (insert the URL for your Etherpad if you're using one)
 eventbrite:       # optional (insert the alphanumeric key for Eventbrite registration, e.g., "1234567890AB")
 ---
@@ -607,7 +607,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   </p>
 -->
 </div> <!-- End of 'Python' section. -->
-
+<!--
 <div id="r"> <!-- Start of 'R' section. -->
   <h3>R</h3>
 
@@ -689,6 +689,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
     <a href="https://github.com/ContinuumIO/anaconda-issues/issues/307">without support to <code>readline</code></a>.
     Instructors will provide a workaround for it if needed.</strong></p>
 </div> <!-- End of 'SQLite' section. -->
+-->
 
 <!--
   Uncomment this section if you are using our virtual machine.
