Fixed error in YAML

--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!-- ****IMPORTANT REMINDER****   -->
-<h1>Delete this line and email the link to your workshop page to admin@software-carpentry.org.  If this is a self organized workshop, please be sure to include any other details Software Carpentry staff may need to know in your email.</h1>
-
-
-<!-- See instructions in the comments below for how to edit specific sections of this workshop template. -->
-
 ---
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS.
@@ -12,7 +6,7 @@ address: "1001 S McAllister Ave, Tempe, AZ 85281"      # street address of works
 country: "us"      # country (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "en"     # language (lowercase two-letter ISO code such as "fr" - see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: "33.419370,-111.928388"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
-humandate: "Feb 18-19"    # human-readable date (e.g., "Feb 17-18, 2020")
+humandate: "Feb 18-19, 2016"    # human-readable date (e.g., "Feb 17-18, 2020")
 humantime: "9:00am - 4:40pm"    # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 2016-02-18      # use YYYY-MM-DD format like 2015-01-01
 enddate: 2016-02-19        # use YYYY-MM-DD format like 2015-01-02
