Edited out R section

--- a/index.html
+++ b/index.html
@@ -601,8 +601,10 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
   </p>
 -->
 </div> <!-- End of 'Python' section. -->
-<!--
+
+<!-- comment out R section
 <div id="r"> <!-- Start of 'R' section. -->
+<!--
   <h3>R</h3>
 
   <p>
@@ -645,7 +647,9 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
       </p>
     </div>
   </div>
-</div> <!-- End of 'R' section. -->
+</div> 
+-->
+<!-- End of 'R' section. -->
 
 <div id="sql"> <!-- Start of 'SQLite' section. -->
   <h3>SQLite</h3>
