Edited out SQLite section

--- a/index.html
+++ b/index.html
@@ -651,6 +651,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
 -->
 <!-- End of 'R' section. -->
 
+<!-- Comment out SQLite section 
 <div id="sql"> <!-- Start of 'SQLite' section. -->
   <h3>SQLite</h3>
 
@@ -688,7 +689,7 @@ eventbrite:       # optional (insert the alphanumeric key for Eventbrite registr
     Instructors will provide a workaround for it if needed.</strong></p>
 </div> <!-- End of 'SQLite' section. -->
 -->
-
+-->
 <!--
   Uncomment this section if you are using our virtual machine.
 
